--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,40 @@
   </head>
   <body>
     <div id="root">
-      <router-view />
+      <transition name="black">
+        <router-view />
+      </transition>
     </div>
+
+      <!--
+        <style>
+
+      .black-leave-active {
+        animation: toBlack 0.5s;
+      }
+
+      .black-enter-active {
+        animation: toBlack 0.5s 0.5s reverse;
+      }
+
+      @keyframes toBlack {
+        to {
+          opacity: 0;
+        }
+      }
+
+      body {
+        overflow: hidden;
+        background: black;
+        width: 100vw;
+        height: 100vh;
+      }
+
+
+    </style> 
+  -->
+    
+
 
     <script src="./app.js"></script>
   </body>
